--- a/src/Styles/inicio.css
+++ b/src/Styles/inicio.css
@@ -1,4 +1,3 @@
-
 .welcome-section {
     box-sizing: border-box;
     background: linear-gradient(#dd9080, #df725d, #cc4b51, #7f4855, #463e50, #233e51, #17232c, #0d1114, #000000);
@@ -17,9 +16,9 @@
 
 .welcome-section .section-hola h1 {
     color: #ffe593;
-    font-size: 50pt;
+    font-size: 48pt;
     width: 100%;
-    font-family: 'Ruthie', cursive;
+    font-family: 'Montez', cursive;
     align-self: center;
 }
 
@@ -47,9 +46,10 @@
     width: 100%;
     font-family: 'Handlee', cursive;
     align-self: center;
-    text-align: center;    
+    text-align: center;
 }
-.welcome-section .photo{
+
+.welcome-section .photo {
     margin-top: 50px;
     width: 400px;
     height: auto;
@@ -63,7 +63,7 @@
     border-radius: 50%;
 }
 
-@media screen and (max-width: 720px){    
+@media screen and (max-width: 720px) {
     .welcome-section .welcome {
         padding-top: 30px;
     }
@@ -71,13 +71,11 @@
         font-size: 30pt;
         padding-left: 10px;
     }
-    
     .welcome-section .section-nombre h1 {
         color: #ffffff;
         font-size: 40pt;
         margin-bottom: 20px;
     }
-    
     .welcome-section .section-nombre p {
         align-self: center;
         color: #ffffff;
@@ -88,10 +86,9 @@
         font-family: 'Handlee', cursive;
         margin: 20px 0px;
     }
-    .welcome-section .photo{
+    .welcome-section .photo {
         width: 100%;
     }
-
     .welcome-section .photo img {
         max-width: 60%;
     }
