--- a/src/Styles/sobre-mi.css
+++ b/src/Styles/sobre-mi.css
@@ -1,5 +1,5 @@
 .about {
-    border: solid 1px #000;
+    /* border: solid 1px #000; */
     width: 90%;
     margin: auto;
     height: 100vh;
@@ -50,23 +50,6 @@
     text-align: justify;
 }
 
-.about .informacion .caracteristica .interfaz {
-    width: 350px;
-}
-
-.about .informacion .div-imagen {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-content: space-around;
-    width: 50%;
-}
-
-.about .informacion .div-imagen .habilidades {
-    width: 150px;
-    height: 150px;
-}
-
 @media screen and (max-width: 720px) {
     .about {
         display: flex;
@@ -91,16 +74,5 @@
     }
     .about .informacion .caracteristica p {
         font-size: 12pt;
-    }
-    .about .informacion .caracteristica .interfaz {
-        width: 40%;
-    }
-    .about .informacion .div-imagen {
-        width: 100%;
-        margin-top: 30px;
-    }
-    .about .informacion .div-imagen .habilidades {
-        width: 60px;
-        height: 60px;
     }
 }
